removed launcher-level handling of content container left/righ margins (actually, based on columnGap for reflowable columnised documents, also affects scrollview for both reflowable and fixed layout content)

--- a/css/viewer.css
+++ b/css/viewer.css
@@ -2,6 +2,9 @@
   display: inline-block;
   height: 100%;
   position: relative;
+  
+  width: 100%;
+  overflow: hidden;
 }
 #about-dialog div{
   text-align: center;
